<resources>
    <string name="prefs_file">com.example.ei1039_48.PREFERENCE_FILE_KEY</string>

    <string name="app_name">Give&amp;Take</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Usuario</string>
    <string name="nav_header_subtitle">Dirección</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Toolbar titles-->
    <string name="toolbar_title_add_product">Añadir producto</string>
    <string name="toolbar_title_info_product">Información del producto</string>
    <string name="toolbar_title_login">Iniciar Sesión</string>
    <string name="toolbar_title_register">Register</string>
    <string name="toolbar_title_vendor_profile">"Perfil del vendedor"</string>
    <string name="toolbar_title_review">"Reseña"</string>



    <!-- left main bar options -->
    <string name="menu_home">Incio</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_favs">Favoritos</string>
    <string name="menu_chat">Chats</string>
    <string name="menu_settings">Ajustes</string>

    <!-- Profile -->
    <string name="tab_profile_product">Productos</string>
    <string name="tab_profile_swap">Opiniones</string>

    <!-- main bar options -->
    <string name="menu_login">Iniciar Sesión</string>
    <string name="menu_register">Registrarse</string>
    <string name="menu_logout">Cerrar Sesión</string>

    <!-- login -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="sign_in">Iniciar Sesión</string>
    <string name="sign_up">Registrarse</string>

    <!-- register and modify profile -->
    <string name="edit_profile">Editar perfil</string>
    <string name="query_map">Escriba o busque su dirección</string>
    <string name="register_name">Nombre:</string>
    <string name="register_date">Fecha de nacimiento:</string>
    <string name="register_genre">Género:</string>
    <string name="register_confirm">Confirmar</string>
    <string name="register_genre_selection">Seleccionar</string>
    <string name="register_date_hint">dd/mm/aaaa</string>
    <string name="edit_cancel">Cancelar</string>
    <string name="register_name_hint">Escriba su nombre completo</string>

    <!-- settings -->
    <string name="delete_account">Si deseas eliminar la cuenta de forma permanente pulsa el botón</string>
    <string name="delete_account_button">Borrar</string>

    <!-- item_product -->
    <string name="item_product_name">Nombre prodcuto</string>
    <string name="item_product_description">Esto es un ejemplo de una descripción de tamaño medio de un producto</string>

    <!-- item_review -->
    <string name="item_review_swap">Intercambió:</string>
    <string name="item_review_experience">Experiencia %1$s</string>

    <string name="item_review_date">Por shortName el dateWithLongMonth</string>


    <!-- add product -->
    <string name="add_product_name_hint">Nombre del producto</string>
    <string name="add_product_txt_desc">Descripción:</string>
    <string name="add_product_desc_hint">Describa aquí su producto</string>
    <string name="add_prtoduct_txt_cat">Categoría:</string>

    <!-- Lis of products - profile -->
    <string name="profile_products_void">Actualmente no tienes productos</string>

    <!-- Lis of products - profile -->
    <string name="profile_reviews_void">Actualmente no tienes reseñas</string>

    <!-- Lis of products - home -->
    <string name="home_products_void">Actualmente no hay productos Desliza haia abajo para recargar</string>


    <!-- product info -->
    <string name="product_name_info">Nombre del producto</string>
    <string name="product_desc_info">Aquí iría toda la descripcion de pinxe producto sería bien larga pero bastante bien hecha no como esta jaja saludos campeon. MAquinaaaaaaa</string>
    <string name="text_note_product_info">Reputación</string>
    <string name="chat_button_product_info">Chat</string>
    <string name="see_profile_button_product_info">Ver perfil</string>
    <string name="addres_product_info">Calle Francisco Ernando, Castellón</string>

    <!-- my product -->
    <string name="swaped_button">Intercambiado</string>
    <string name="toolbar_option__my_product_modify">Modificar producto</string>
    <string name="toolbar_option_my_product_delete">Borrar producto</string>

    <!-- vendor profile -->
    <string name="toolbar_option_vendor_complaint">Denunciar</string>

    <!-- fav activity -->
    <string name="favorites_void">Actualmente no tienes productos favoritos</string>

    <!-- Alert Dailog Options -->
    <string name="alert_dialog_positive">Si</string>
    <string name="alert_dialog_negative">No</string>
    <string name="alert_dialog_negative_review">Cancelar</string>
    <string name="alert_dialog_positive_review">Confirmar</string>
    <string name="alert_dialog_report_confirm">Enviar denuncia</string>
    <string name="alert_dialog_report_cancel">Cancelar</string>
    <string name="alert_dialog_title_report">Motivos de la denuncia</string>
    <string name="alert_dialog_complete_review">Tienes una reseña pendiente</string>
    <string name="alert_dialog_not_last_try_to_complete_review">¿Deseas rellenar la reseña?</string>
    <string name="alert_dialog_last_try_to_complete_review">¿Deseas rellenar la reseña? Es la última oportunidad que tendrás</string>
    <string name="alert_dialog_complete_review_positive">Rellenar</string>
    <string name="alert_dialog_complete_review_negative_last">Definitivamente no</string>
    <string name="alert_dialog_complete_review_negative_not_last">Más tarde</string>


    <!-- Toast messages -->
    <string name="toast_sended_report">Tu denuncia ha sido enviada</string>
    <string name="toast_internet_conection">No se pudo conectar a internet</string>

    <!-- TextView messages -->
    <string name="textview_conection_error">Revisa tu conexión a internet</string>
    <string name="textview_login_register">Inica sesión o Registrate</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>