<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <include
        android:id="@+id/app_bar_main"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:labelFor="@id/addProductName"
        android:text="@string/register_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/addProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/textName"
        android:hint="@string/add_product_name_hint"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textName"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:labelFor="@id/addProductDesc"
        android:text="@string/add_prtoduct_txt_cat"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/textCat">


    </Spinner>

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textName"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:labelFor="@id/addProductDesc"
        android:text="@string/add_product_txt_desc"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/addProductDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDesc"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/add_product_desc_hint"
        android:lines="2"
        android:maxLines="8"
        android:minLines="1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/confirmProduct"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:layout_toEndOf="@id/cancelProduct"
        android:text="@string/register_confirm" />

    <Button
        android:id="@+id/cancelProduct"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/edit_cancel" />

</RelativeLayout>