<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        android:id="@+id/app_bar_main"
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <EditText
        android:id="@+id/usuNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/register_name"
        />

    <EditText
        android:id="@+id/usuFechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuNombre"
        android:layout_marginStart="15dp"
        android:hint="@string/register_date" />

    <LinearLayout
        android:id="@+id/usuGenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuFechaNac"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_genre"
            android:textSize="12sp" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <AutoCompleteTextView
                android:id="@+id/generoSelect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/register_genre_selection"
                android:inputType="none" />
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>
    <!--search view to search our location-->
    <RelativeLayout
        android:id="@+id/ubi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usuGenero">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/idSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="#BFBFBF"
            android:elevation="5dp"

            app:iconifiedByDefault="false"
            app:queryHint="@string/query_map" />

        <!--fragment to display our maps-->
        <fragment xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_below="@id/idSearchView"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            tools:context=".MapsActivity" />
    </RelativeLayout>

    <Button
        android:id="@+id/confirmRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ubi"
        android:layout_margin="15dp"
        android:text="@string/register_confirm" />


</RelativeLayout>