<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/new_product"
    >


    <include
        android:id="@+id/toolbarAddProduct"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="80dp"
        android:labelFor="@id/addProductName"
        android:text="@string/register_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/addProductName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/textName"
        android:hint="@string/add_product_name_hint"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textCat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textName"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:labelFor="@id/addProductDesc"
        android:text="@string/add_prtoduct_txt_cat"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/spinnerProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textName"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:layout_toEndOf="@id/textCat">
    </Spinner>

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textName"
        android:layout_marginStart="15dp"
        android:layout_marginTop="70dp"
        android:labelFor="@id/addProductDesc"
        android:text="@string/add_product_txt_desc"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/addProductDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textDesc"
        android:layout_marginStart="12dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/add_product_desc_hint"
        android:lines="2"
        android:maxLines="8"
        android:minLines="1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addProductDesc"
        android:layout_alignParentStart="true"
        android:layout_marginStart="65dp"
        android:text="Subir foto" />

    <Button
        android:id="@+id/btnCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addProductDesc"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="65dp"
        android:text="Hacer foto" />

    <Button
        android:id="@+id/confirmProduct"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register_confirm" />

    <ImageView
        android:id="@+id/imgAddProduct"
        android:layout_width="340dp"
        android:layout_height="290dp"
        android:layout_above="@+id/confirmProduct"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="15dp"
        tools:srcCompat="@tools:sample/avatars" />


</RelativeLayout>