<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_400"
    >

    <include
        android:id="@+id/toolbarEditProfile"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="85dp"
        android:labelFor="@id/registerName"
        android:text="@string/register_name"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="15dp"
        android:layout_toEndOf="@id/editTextName"
        android:textSize="20sp" />


    <TextView
        android:id="@+id/editTextFechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editName"
        android:layout_marginStart="15dp"

        android:layout_marginTop="10dp"
        android:text="@string/register_date"
        android:textColor="@color/black"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/editFechaNac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editName"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@id/editTextFechaNac"
        android:hint="@string/register_date_hint"/>

    <LinearLayout
        android:id="@+id/layoutGenderEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editFechaNac"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp">
        <TextView
            android:id="@+id/textGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_genre"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:paddingTop="10dp"/>

        <RadioGroup
            android:id="@+id/genderRadioBtnEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="10dp">

            <RadioButton
                android:id="@+id/maleEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="Hombre"/>
            <RadioButton
                android:id="@+id/femaleEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="Mujer" />
            <RadioButton
                android:id="@+id/otherEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:text="Otro"/>
        </RadioGroup>
    </LinearLayout>

    <!--search view to search our location-->
    <RelativeLayout
        android:id="@+id/ubi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutGenderEdit"
        android:layout_marginTop="5dp">

        <androidx.appcompat.widget.SearchView
            android:id="@+id/editSearchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@color/grey_400"
            android:elevation="5dp"
            app:iconifiedByDefault="false"
            app:queryHint="@string/query_map" />

        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/productInforMapLay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardCornerRadius="15dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="70dp"
            card_view:cardElevation="0dp">

            <fragment xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/editMap"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".ui.activities.EditProfileActivity" />
        </androidx.cardview.widget.CardView>

    </RelativeLayout>

    <Button
        android:id="@+id/confirmEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/register_confirm" />




</RelativeLayout>